--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REACT_APP_PUBLIC_FOLDER = https://socialmediarestapi.onrender.com/images/
+REACT_APP_PUBLIC_FOLDER = https://socialmediarestapi1.onrender.com/images/
